# http-c

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE.md  README.md  compile_commands.json  test.py
src/: httpc.c  httpc.h  main.c
